// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id',
  },
  world: {
    defaultMessage: 'world',
  },
  headerTitle: {
    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.',
  },
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id'
  },
  world: {
    'id': 'src.__fixtures__.world',

    defaultMessage: 'world'
  },
  headerTitle: {
    'id': 'src.__fixtures__.headerTitle',

    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.'
  }
});
"
`;

exports[`Object 2`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id',
  },
  world: {
    defaultMessage: 'world',
  },
  headerTitle: {
    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.',
  },
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id'
  },
  world: {
    'id': '__fixtures__.world',

    defaultMessage: 'world'
  },
  headerTitle: {
    'id': '__fixtures__.headerTitle',

    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.'
  }
});
"
`;

exports[`Object 3`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id',
  },
  world: {
    defaultMessage: 'world',
  },
  headerTitle: {
    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.',
  },
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id'
  },
  world: {
    'id': '__fixtures__.world',

    defaultMessage: 'world'
  },
  headerTitle: {
    'id': '__fixtures__.headerTitle',

    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.'
  }
});
"
`;

exports[`Object 4`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id',
  },
  world: {
    defaultMessage: 'world',
  },
  headerTitle: {
    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.',
  },
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',

    defaultMessage: 'world'
  },
  headerTitle: {
    'id': 'src.__fixtures__.messages.headerTitle',

    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.'
  }
});
"
`;

exports[`basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`basic 2`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`basic 3`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`basic 4`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`basic 5`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`basic 6`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.default.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.default.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`import as 1`] = `
"
import { defineMessages as m } from 'react-intl'

m({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages as m } from 'react-intl';

m({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`import as 2`] = `
"
import { defineMessages as m } from 'react-intl'

m({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages as m } from 'react-intl';

m({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`import as 3`] = `
"
import { defineMessages as m } from 'react-intl'

m({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages as m } from 'react-intl';

m({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`import as 4`] = `
"
import { defineMessages as m } from 'react-intl'

m({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages as m } from 'react-intl';

m({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`multi export 2`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`multi export 3`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`multi export 4`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`multi export 5`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.extra.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.extra.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`multi export 6`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.extra.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.extra.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.default.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.default.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`string literal 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  'hello': 'hello',
  'world': 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  'hello': {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  'world': {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`string literal 2`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  'hello': 'hello',
  'world': 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  'hello': {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  'world': {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`string literal 3`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  'hello': 'hello',
  'world': 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  'hello': {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  'world': {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`string literal 4`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  'hello': 'hello',
  'world': 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  'hello': {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  'world': {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`with include value 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});
"
`;

exports[`with include value 2`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});
"
`;

exports[`with include value 3`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});
"
`;

exports[`with include value 4`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': \`hello world \${1}\`
  }
});
"
`;

exports[`with other func 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

hello({
  id: 'hoge',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});

hello({
  id: 'hoge'
});
"
`;

exports[`with other func 2`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

hello({
  id: 'hoge',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});

hello({
  id: 'hoge'
});
"
`;

exports[`with other func 3`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

hello({
  id: 'hoge',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});

hello({
  id: 'hoge'
});
"
`;

exports[`with other func 4`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

hello({
  id: 'hoge',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': \`hello world \${1}\`
  }
});

hello({
  id: 'hoge'
});
"
`;
